[gd_scene load_steps=12 format=3 uid="uid://g2o8ee42dabs"]

[ext_resource type="Script" path="res://entities/enemies/enemies.gd" id="1_fr6v8"]
[ext_resource type="Texture2D" uid="uid://jtyv2q83selb" path="res://assets/space_breaker_asset/Ships/Small/body_01.png" id="2_rt6ne"]
[ext_resource type="PackedScene" uid="uid://b51s7gt8mn0ih" path="res://entities/components/health_component.tscn" id="3_7gbns"]
[ext_resource type="Script" path="res://entities/enemies/components/enemy_move_component.gd" id="4_krqto"]
[ext_resource type="AudioStream" uid="uid://cn3cswr8l15ai" path="res://assets/sounds/8bit_bomb_explosion.wav" id="5_r5pax"]

[sub_resource type="Shader" id="Shader_2f0cd"]
code = "shader_type canvas_item;

uniform vec4 flash_color : source_color = vec4(1.0);

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	COLOR = mix(COLOR, flash_color, COLOR.a * flash_color.a);
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hwsn2"]
resource_local_to_scene = true
shader = SubResource("Shader_2f0cd")
shader_parameter/flash_color = Color(1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru3q2"]
size = Vector2(14, 30.4375)

[sub_resource type="Animation" id="Animation_84tv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mjjqx"]
resource_name = "hit"
length = 0.37
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667),
"transitions": PackedFloat32Array(0.450625, 0.965937, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.901961), Color(1, 1, 1, 0.901961), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-3.72529e-09, 0.166667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(-2, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfts0"]
_data = {
"RESET": SubResource("Animation_84tv5"),
"hit": SubResource("Animation_mjjqx")
}

[node name="Enemies" type="CharacterBody2D" groups=["Enemy"]]
material = SubResource("ShaderMaterial_hwsn2")
script = ExtResource("1_fr6v8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ru3q2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 5.68434e-14)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ru3q2")

[node name="Icon" type="Sprite2D" parent="."]
use_parent_material = true
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_rt6ne")

[node name="HealthComponent" parent="." instance=ExtResource("3_7gbns")]
max_hp = 5
initial_hp = 5
show_damage_indicator = true

[node name="EnemyMoveComponent" type="Node2D" parent="."]
script = ExtResource("4_krqto")

[node name="HitPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bfts0")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_r5pax")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="on_damage" from="HealthComponent" to="." method="_on_health_component_on_damage"]
[connection signal="on_death" from="HealthComponent" to="." method="_on_health_component_on_death"]
